[package]
name = "antiddos-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
ctrlc = "3.5.2"
dashmap = "6.1.0"
ipnet = "2.12.0"
is_elevated = "0.1.2"
netstat2 = "0.11.2"
nix = { version = "0.31.2", features = ["user"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
